# veyra

./: .gitignore  README.md
.github/workflows/: build-binaries.yml
.pi/extensions/: veyra-minecraft-dev.ts
Solas Shader V3.6/drm/: drm.readme
Solas Shader V3.6/shaders/: block.properties  clrwl_gbuffers.fsh  clrwl_gbuffers.vsh  clrwl_gbuffers_translucent.fsh  clrwl_gbuffers_translucent.vsh  clrwl_shadow.fsh  clrwl_shadow.vsh  colorwheel.properties  composite.fsh  composite.vsh  composite1.fsh  composite1.vsh  composite13.fsh  composite13.vsh  composite14.fsh  composite14.vsh  composite15.fsh  composite15.vsh  composite3.fsh  composite3.vsh  deferred.fsh  deferred.vsh  deferred1.fsh  deferred1.vsh  dh_terrain.fsh  dh_terrain.vsh  dh_water.fsh  dh_water.vsh  entity.properties  final.fsh  final.vsh  gbuffers_armor_glint.fsh  gbuffers_armor_glint.vsh  gbuffers_basic.fsh  gbuffers_basic.vsh  gbuffers_beaconbeam.fsh  gbuffers_beaconbeam.vsh  gbuffers_block.fsh  gbuffers_block.vsh  (+26 more)
docs/: README.md  architecture.md  build.md  data-layout.md  launcher.md  mod.md  roadmap.md  server-safety.md  troubleshooting.md
launcher/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/icons/: icon.icns
launcher/src-tauri/src/: auth.rs  error.rs  lib.rs  main.rs  minecraft.rs  paths.rs  types.rs
mod/: build.gradle  gradle.properties  settings.gradle
patches/: vulkanmod-shader-config.patch
tools/: veyra_minecraft_dev_cycle.py
(+611 files in other folders)
