[package]
name = "block-tracker-launcher"
version = "0.1.0"
description = "A standalone Minecraft launcher for Veyra"
authors = ["Veyra"]
edition = "2021"

[lib]
name = "block_tracker_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
dirs = "5"
futures-util = "0.3"
keyring = { version = "3", features = ["windows-native"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
url = "2"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
